--- a/deploy/crds/postgres.kabisa.nl_postgresusersgrant_crd.yaml
+++ b/deploy/crds/postgres.kabisa.nl_postgresusersgrant_crd.yaml
@@ -1,14 +1,14 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: databases.postgres.kabisa.nl
+  name: postgresusers.postgres.kabisa.nl
 spec:
   group: postgres.kabisa.nl
   names:
-    kind: Database
-    listKind: DatabaseList
-    plural: databases
-    singular: database
+    kind: PostgresUser
+    listKind: PostgresUserList
+    plural: postgresusers
+    singular: postgresuser
   scope: Namespaced
   subresources:
     status: {}
@@ -18,9 +18,15 @@ spec:
       required: ["spec"]
       properties:
         spec:
-          required: ["host" , "database_name"]
+          required: ["user_name", "secret_name", "priv", "database_name"]
           properties:
-            host:
+            user_name:
+              type: string
+              minimum: 1
+            secret_name:
+              type: string
+              minimum: 1
+            priv:
               type: string
               minimum: 1
             database_name:
