--- a/watches.yaml
+++ b/watches.yaml
@@ -7,3 +7,19 @@
     name: finalizer.postgres.kabisa.nl
     vars:
       desired_state: absent
+- version: v1alpha1
+  group: postgres.kabisa.nl
+  kind: PostgresUser
+  role: /opt/ansible/roles/postgresuser
+  finalizer:
+    name: finalizer.postgres.kabisa.nl
+    vars:
+      desired_state: absent
+- version: v1alpha1
+  group: postgres.kabisa.nl
+  kind: PostgresUserGrant
+  role: /opt/ansible/roles/postgresuser
+  finalizer:
+    name: finalizer.postgres.kabisa.nl
+    vars:
+      desired_state: absent
