--- a/watches.yaml
+++ b/watches.yaml
@@ -15,11 +15,11 @@
     name: finalizer.postgres.kabisa.nl
     vars:
       desired_state: absent
-- version: v1alpha1
-  group: postgres.kabisa.nl
-  kind: PostgresUserGrant
-  role: /opt/ansible/roles/postgresuser
-  finalizer:
-    name: finalizer.postgres.kabisa.nl
-    vars:
-      desired_state: absent
+#- version: v1alpha1
+#  group: postgres.kabisa.nl
+#  kind: PostgresUserGrant
+#  role: /opt/ansible/roles/postgresusergrant
+#  finalizer:
+#    name: finalizer.postgres.kabisa.nl
+#    vars:
+#      desired_state: absent
