--- a/roles/jobs/tasks/create_job.yml
+++ b/roles/jobs/tasks/create_job.yml
@@ -7,6 +7,11 @@
       metadata:
         name: pg-backup
         namespace: "{{ meta.namespace }}"
+# this gives the job some time to be terminated first
+- name: ensure scripts
+  include_role:
+    name: jobs
+    tasks_from: ensure_scripts
 - name: create job
   k8s:
     state: present
