--- a/roles/jobs/tasks/create_job.yml
+++ b/roles/jobs/tasks/create_job.yml
@@ -1,26 +1,30 @@
+- debug:
+    var: meta
+- debug:
+    var: job_spec
 - name: ensure no old version of backup job
   k8s:
     state: absent
-    definition:
-      apiVersion: batch/v1
-      kind: Job
-      metadata:
-        name: pg-backup
-        namespace: "{{ meta.namespace }}"
+    api_version: batch/v1beta1
+    kind: Job
+    name: "pg-backup-job-{{ meta.name }}"
+    namespace: "{{ meta.namespace }}"
+  when: desired_state != "present"
 # this gives the job some time to be terminated first
 - name: ensure scripts
   include_role:
     name: jobs
     tasks_from: ensure_scripts
+  when: desired_state == "present"
 - name: create job
   k8s:
-    state: present
+    state: "{{ desired_state }}"
     definition:
       apiVersion: batch/v1
       kind: Job
       metadata:
-        name: pg-backup-job
+        name: "pg-backup-job-{{ meta.name }}"
         namespace: "{{ meta.namespace }}"
       spec: "{{ job_spec }}"
-
+  when: desired_state == "present"
 
