--- a/backup-playbook.yml
+++ b/backup-playbook.yml
@@ -1,52 +1,13 @@
 - name: BACKUP PLAYBOOK
   hosts: localhost
   tasks:
-  - name: Include vars
-    include_vars:
-      file: vars.yml
-  - debug:
-      msg: '{{ meta.namespace }}'
-  # collect vars
-  - name: get database info
-    include_role:
-      name: database
-      tasks_from: get_info
-    vars:
-      res_key: "from_database"
-  - name: get az blobs container info
-    include_role:
-      name: az_blobs_container
-      tasks_from: get_info
-    vars:
-      res_key: "to_az_blobs"
-  - name: get vars
-    set_fact:
-      to_az_blobs: "{{ res_dict.to_az_blobs }}"
-      from_database: "{{ res_dict.from_database }}"
-  - name: ensure scripts
-    include_role:
-      name: jobs
-      tasks_from: ensure_scripts
-  - name: get pg_dump container info
-    include_role:
-      name: jobs
-      tasks_from: container_def_pg_dump
-  - name: get az blobs upload container info
-    include_role:
-      name: jobs
-      tasks_from: container_def_az_blobs_upload
-  - debug:
-      var: pg_dump_container
-  - debug:
-      var: az_blobs_upload_container
-  - name: create job spec
-    include_role:
-      name: jobs
-      tasks_from: create_job_spec
-    vars:
-      from_container: "{{ pg_dump_container }}"
-      to_container: "{{ az_blobs_upload_container }}"
-  - name: create cron job
-    include_role:
-      name: jobs
-      tasks_from: create_cron_job
+    - name: Include vars
+      include_vars:
+        file: vars.yml
+    - name: ensure no old version of cron job
+      k8s:
+        state: absent
+        api_version: batch/v1beta1
+        kind: CronJob
+        name: "pg-backup-cronjob-{{ meta.name }}"
+        namespace: "{{ meta.namespace }}"
