--- a/deploy/crds/postgres.kabisa.nl_database_restore_job_crd.yaml
+++ b/deploy/crds/postgres.kabisa.nl_database_restore_job_crd.yaml
@@ -1,14 +1,14 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: databasecopyjob.postgres.kabisa.nl
+  name: databaserestorejob.postgres.kabisa.nl
 spec:
   group: postgres.kabisa.nl
   names:
-    kind: DatabaseCopyJob
-    listKind: DatabaseCopyJobs
-    plural: databasecopyjob
-    singular: databasecopyjob
+    kind: DatabaseRestoreJob
+    listKind: DatabaseRestoreJobs
+    plural: databaserestorejob
+    singular: databaserestorejob
   scope: Namespaced
   subresources:
     status: {}
@@ -18,9 +18,9 @@ spec:
       required: ["spec"]
       properties:
         spec:
-          required: ["to_database_name"]
+          required: ["database_name"]
           properties:
-            to_database_name:
+            database_name:
               type: string
               minimum: 1
             az_blobs_container:
