--- a/roles/backup_cron_job/tasks/main.yml
+++ b/roles/backup_cron_job/tasks/main.yml
@@ -1,6 +1,7 @@
+---
 - name: create job
   include_role:
     name: jobs
     tasks_from: backup
   vars:
-    job_type: create_job
+    job_type: create_cron_job
