--- a/roles/backup_job/tasks/main.yml
+++ b/roles/backup_job/tasks/main.yml
@@ -1,6 +1,8 @@
+---
+- name: set job type
+  set_fact:
+    job_type: create_job
 - name: create job
   include_role:
     name: jobs
     tasks_from: backup
-  vars:
-    job_type: create_cron_job
