--- a/watches.yaml
+++ b/watches.yaml
@@ -23,3 +23,11 @@
 #    name: finalizer.postgres.kabisa.nl
 #    vars:
 #      desired_state: absent
+- version: v1alpha1
+  group: postgres.kabisa.nl
+  kind: DatabaseBackupCronJob
+  role: /opt/ansible/roles/backup_cron_job
+  finalizer:
+    name: finalizer.postgres.kabisa.nl
+    vars:
+      desired_state: absent
