--- a/watches.yaml
+++ b/watches.yaml
@@ -31,3 +31,19 @@
     name: finalizer.postgres.kabisa.nl
     vars:
       desired_state: absent
+- version: v1alpha1
+  group: postgres.kabisa.nl
+  kind: DatabaseBackupJob
+  role: /opt/ansible/roles/backup_job
+  finalizer:
+    name: finalizer.postgres.kabisa.nl
+    vars:
+      desired_state: absent
+- version: v1alpha1
+  group: postgres.kabisa.nl
+  kind: DatabaseRestoreJob
+  role: /opt/ansible/roles/restore_job
+  finalizer:
+    name: finalizer.postgres.kabisa.nl
+    vars:
+      desired_state: absent
