--- a/roles/backup_cron_job/tasks/main.yml
+++ b/roles/backup_cron_job/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
-- name: create job
+- name: create backup cron job
   include_role:
     name: jobs
     tasks_from: backup
   vars:
-    job_type: create_cron_job
+    job_type: cron_job
