--- a/roles/jobs/tasks/copy.yml
+++ b/roles/jobs/tasks/copy.yml
@@ -4,35 +4,37 @@
     tasks_from: get_info
   vars:
     res_key: "from_database"
+    database_name: "{{ from_database_name }}"
 - name: get az blobs container info
   include_role:
-    name: az_blobs_container
+    name: database
     tasks_from: get_info
   vars:
-    res_key: "to_az_blobs"
+    res_key: "to_database"
+    database_name: "{{ to_database_name }}"
 - name: get vars
   set_fact:
-    to_az_blobs: "{{ res_dict.to_az_blobs }}"
     from_database: "{{ res_dict.from_database }}"
+    to_database: "{{ res_dict.to_database }}"
+- name: get pg_restore container info
+  include_role:
+    name: jobs
+    tasks_from: container_def_pg_restore
 - name: get pg_dump container info
   include_role:
     name: jobs
     tasks_from: container_def_pg_dump
-- name: get az blobs upload container info
-  include_role:
-    name: jobs
-    tasks_from: container_def_az_blobs_upload
+- debug:
+    var: pg_restore_container
 - debug:
     var: pg_dump_container
-- debug:
-    var: az_blobs_upload_container
 - name: create job spec
   include_role:
     name: jobs
     tasks_from: create_job_spec
   vars:
     from_container: "{{ pg_dump_container }}"
-    to_container: "{{ az_blobs_upload_container }}"
+    to_container: "{{ pg_restore_container }}"
 - debug:
     var: job_type
 - name: create job
