--- a/roles/jobs/tasks/restore.yml
+++ b/roles/jobs/tasks/restore.yml
@@ -3,36 +3,36 @@
     name: database
     tasks_from: get_info
   vars:
-    res_key: "from_database"
+    res_key: "to_database"
 - name: get az blobs container info
   include_role:
     name: az_blobs_container
     tasks_from: get_info
   vars:
-    res_key: "to_az_blobs"
+    res_key: "from_az_blobs"
 - name: get vars
   set_fact:
-    to_az_blobs: "{{ res_dict.to_az_blobs }}"
-    from_database: "{{ res_dict.from_database }}"
-- name: get pg_dump container info
+    from_az_blobs: "{{ res_dict.from_az_blobs }}"
+    to_database: "{{ res_dict.to_database }}"
+- name: get pg_restore container info
   include_role:
     name: jobs
-    tasks_from: container_def_pg_dump
+    tasks_from: container_def_pg_restore
 - name: get az blobs upload container info
   include_role:
     name: jobs
-    tasks_from: container_def_az_blobs_upload
+    tasks_from: container_def_az_blobs_download
 - debug:
-    var: pg_dump_container
+    var: pg_restore_container
 - debug:
-    var: az_blobs_upload_container
+    var: az_blobs_download_container
 - name: create job spec
   include_role:
     name: jobs
     tasks_from: create_job_spec
   vars:
-    from_container: "{{ pg_dump_container }}"
-    to_container: "{{ az_blobs_upload_container }}"
+    from_container: "{{ az_blobs_download_container }}"
+    to_container: "{{ pg_restore_container }}"
 - debug:
     var: job_type
 - name: create job
