--- a/roles/jobs/tasks/create_job.yml
+++ b/roles/jobs/tasks/create_job.yml
@@ -4,7 +4,7 @@
     var: job_spec
 - name: generate random name
   set_fact:
-    job_name: "pg-backup-job-{{ meta.name }}-{{ ansible_date_time.epoch | string | b64encode | regex_replace('=+', '') | lower }}"
+    job_name: "pg-backup-job-{{ meta.name }}"
 - name: ensure scripts
   include_role:
     name: jobs
@@ -12,6 +12,7 @@
   when: desired_state == "present"
 - name: create job
   k8s:
+    apply: yes
     state: "{{ desired_state }}"
     definition:
       apiVersion: batch/v1
